--- a/templates/all_trails.html
+++ b/templates/all_trails.html
@@ -52,9 +52,10 @@
   <form class="filters" id="filters" onsubmit="return false;">
     <fieldset>
       <legend><strong>Difficulty</strong></legend>
-      <label><input type="checkbox" name="difficulty" value="Easy"> Easy</label><br>
-      <label><input type="checkbox" name="difficulty" value="Moderate"> Moderate</label><br>
-      <label><input type="checkbox" name="difficulty" value="Hard"> Hard</label>
+      <label><input type="checkbox" name="difficulty" value="Easy">Easy</label><br>
+      <label><input type="checkbox" name="difficulty" value="Moderate">Moderate</label><br>
+      <label><input type="checkbox" name="difficulty" value="Hard">Hard</label>
+      <label><input type="checkbox" name="difficulty" value="Hard">Expert</label>
     </fieldset>
 
     <fieldset>
